--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,12 @@
 <% @tasks.each do |task| %>
-<h1><%= link_to task.creator, task_path(task) %> - <%= task.msg %></h1>
+<h1><%= link_to task.title, task_path(task) %> - <%= task.details %></h1>
+
+<%= check_box_tag 'completed', 'accepted', task.completed, disabled: true %>
+
 <%= link_to "edit", edit_task_path(task)  %>
-<%= link_to "destroy", task_path(task), method: :delete %>
+<%#= link_to 'Delete',url_for(action: :delete,id: @user.id), method: :delete, confirm: "Are you sure?" %>
+<%= link_to "destroy", task_path(task), method: :delete, data: { confirm: 'Are you sure?' } %>
 
 <% end %>
 <br>
-<%= link_to "new task", new_task_path %>
+<%= link_to "new task", tasks_new_path %>
